<resources>
    <string name="app_name">Capital Loans</string>
    <string name="splash_logo_description">logo</string>
    <string name="app_tag">An Easy to use Hassle free \n Loan App</string>
    <string name="app_hours">( 24/7 )</string>
    <string name="splash_to_signup">i`m new, create my account</string>
    <string name="reset_password">Forgot Password ? Reset</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="terms_conditions">I agree to terms conditions</string>
    <string name="sign_up_full_name">Full Name</string>
    <string name="sign_up_date_of_birth">Date of Birth</string>
    <string name="sign_up_in_phone_number">Phone Number</string>
    <string name="sign_up_in_password">Password</string>
    <string name="sign_up_repeat_password">Repeat Password</string>

    <!--Loan Application-->
    <string name="loan_application_id_number">ID Number</string>
    <string name="loan_application_amount">Loan Amount</string>
    <string name="loan_repayment_period">Loan Repayment Period</string>
    <string name="loan_purpose">Purpose for the loan</string>
    <string name="mpesa_number">M-PESA Number</string>
    <string name="mpesa_dialog_text">Go to M-PESA \n Send Money \n Enter Number - 07xxxxxxxx \n Amount 350/= </string>
    <string name="mpesa_congratulation">Congratulations\n your applications has been received\n we will get back to you shortly\n Caroline Jones - 07yyyyyyyy \n Ksh 10,000 </string>

    <string name="fee_payment">
All First time applicants are required to pay a fee of kSh 350, this is however automatically refunded if you DO NOT qualify for a loan.

The Fee is used to confirm your credit history from relevant lending organizations and determines your loan limit. Kindly note that the ksh 350 is only refunded if you DO NOT qualify for the loan.
        However, if your loan is approved, the ksh 350 will be included in your loan repayment.</string>

    <!--DashBoard Strings-->

    <string name="dashboard_about_us_title">About Us</string>
    <string name="dashboard_about_us_description"> More about what we do at \nCapital Loans</string>

    <string name="dashboard_faqs_title">FAQs</string>
    <string name="dashboard_faqs_description"> View Frequently Asked Questions </string>

    <string name="dashboard_requirements_title">Qualify</string>
    <string name="dashboard_requirements_description"> What you need to qualify for a loan</string>

    <string name="dashboard_my_profile_title">Tracker</string>
    <string name="dashboard_my_profile_description"> View your periodic loaning track </string>

    <string name="dashboard_loan_application_title">Apply for Loan</string>
    <string name="dashboard_loan_application_description"> Borrow up to Ksh30,000 </string>
    <string name="dashboard_loan_application_btn">Apply for loan</string>

    <!--FAQ questions-->

    <string name="hide">HIDE</string>

    <string name="how_much_title">How much can I borrow?</string>
    <string name="how_much_text"> We offer loans from 5000 Ksh to 200,000 Ksh to help with all kinds of expenses including car repairs,
        medical bills, rent, bond, dental work, fees and business startup capital. Applying is simple and we help you work out how much
        you can afford to borrow. Repayments can be scheduled to suit you and generally occur weekly or fortnightly. </string>

    <string name="if_i_dont_pay_title">What happens if I don`t pay?</string>
    <string name="if_i_dont_pay_text"> We’re very patient if you need more time to pay talk to us and we can adjust the repayment schedule! We’ll work together and make a payment plan that fits you to avoid consequences such as:
    Handing over to collection companies Being listed at the Credit Reference Bureau</string>

    <string name="who_is_title">Who is Capital Loans Kenya?</string>
    <string name="who_is_text"> Capital Loans Kenya is a licensed credit provider that’s offered short term financial solutions for ten years. Having written more than 1.5 million personal loans in Kenya, Capital Loans is a trusted provider that has the expertise to offer you an affordable loan that best suits your situation. We have a long standing relationship with international retail group Pepkor, which operates more than 4000 stores in 15 countries.
    </string>

    <string name="eligible_title">Am I eligible to apply for a loan?</string>
    <string name="eligible_text"> To apply for a loan you need to be:\n
            1. A permanent Kenyan resident\n
            2. Have a valid government-issued ID\n
            3. Be at least 18 years of age\n
            4. Have been an active M-PESA or Airtel money user for at least 2 months.</string>

    <string name="approved_title">When will I know if i am approved?</string>
    <string name="approved_text"> We make sure to keep you updated on the progress of your loan application through regular SMS.
        If conditionally approved we will contact you to let you know the good news and your funds transferred to your MPESA account afterwards.</string>

    <string name="how_long_title">How long does it take to get funded?</string>
    <string name="how_long_text"> Loans are usually funded within 30 minutes after approval. In the unlikely event your loan does not get approved,
        you will promptly be notified via SMS and a FULL REFUND of the 350 Ksh registration fee will be made.</string>

    <string name="early_payment_title">Any fee charges if I pay out my loan early?</string>
    <string name="early_payment_text"> No, there are no hidden fees or charges associated with a small personal loan.
        All charges are disclosed upfront within your contract and there is no penalty fee if you choose to pay out your loan early.</string>

    <string name="make_repayments_title">How do I make repayments on my loan?</string>
    <string name="make_repayments_text"> Loan repayments are scheduled to suit your pay dates and you pay directly to our bank account either weekly or monthly.
        Our bank details will be sent to you if your loan application is approved.</string>
    <string name="about_us_text">Welcome to Capital Loans Kenya. We specialize in small loans up to Ksh 200,000.\n
        Here at Capital Loans we endeavor to make your application/loan experience as easy and hassle free as possible. \n
        Are you in a fix and need a timely solution? Capital Loans Kenya is for you. \nThe application process takes less than 5 minutes to complete.\n
        After which it is fully assessed by one of our experienced team members. \nOnce it meets our loan requirements, the funds will be transferred to your
        Mpesa account within 30 minutes. We have an 80% conversion rate on all our clients, and we come highly recommended to their family and friends as
        we pride ourselves in honesty and reliability. \nJust give us a try and enjoy the Capital Loan experience for yourself.</string>

</resources>
