<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TODO assign definitive IDs to items you will use-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/image_capital_loans">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_white"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="6dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:text="@string/signUp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                    <!--USERNAME-->
                    <android.support.design.widget.TextInputEditText
                        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                        android:drawableStart="@drawable/ic_person_outline_black_24dp"
                        style="@style/LoginStyle"
                        android:inputType="text"
                        android:hint="@string/sign_up_full_name"
                        android:textColorHint="@color/textHint"
                        android:theme="@style/EditText.Login" />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--DATE OF BIRTH-->
                    <android.support.design.widget.TextInputEditText
                        style="@style/LoginStyle"
                        android:drawableLeft="@drawable/ic_calender"
                        android:drawableStart="@drawable/ic_calender"
                        android:inputType="date"
                        android:hint="@string/sign_up_date_of_birth"
                        android:theme="@style/EditText.Login" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--PHONE NUMBER-->
                    <android.support.design.widget.TextInputEditText
                        style="@style/LoginStyle"
                        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                        android:drawableStart="@drawable/ic_local_phone_black_24dp"
                        android:inputType="text"
                        android:hint="@string/sign_up_in_phone_number"
                        android:theme="@style/EditText.Login" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--PASSWORD-->
                    <android.support.design.widget.TextInputEditText
                        android:drawableLeft="@drawable/ic_password_lock_grey"
                        android:drawableStart="@drawable/ic_password_lock_grey"
                        style="@style/LoginStyle"
                        android:inputType="textPassword"
                        android:hint="@string/sign_up_in_password"
                        android:theme="@style/EditText.Login" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--REPEAT PASSWORD-->
                    <android.support.design.widget.TextInputEditText
                        style="@style/LoginStyle"
                        android:drawableLeft="@drawable/ic_password_lock_grey"
                        android:drawableStart="@drawable/ic_password_lock_grey"
                        android:inputType="textPassword"
                        android:hint="@string/sign_up_repeat_password"
                        android:theme="@style/EditText.Login" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--CHECKBOX-->
                    <CheckBox
                        style="@style/Checkbox.Login"
                        android:theme="@style/Checkbox.Login"
                        android:text="@string/terms_conditions"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                    <!--SIGN UP BUTTON-->
                    <Button
                        android:id="@+id/signup_to_home"
                        android:layout_width="200dp"
                        android:layout_gravity="center"
                        android:layout_height="55dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/custom_orange_rounded_button"
                        android:text="@string/signUp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
